m
Return-path: <linux-media-owner@vger.kernel.org>
Received: from lb2-smtp-cloud9.xs4all.net ([194.109.24.26]:41301 "EHLO
        lb2-smtp-cloud9.xs4all.net" rhost-flags-OK-OK-OK-OK)
        by vger.kernel.org with ESMTP id S1726130AbeHEMDl (ORCPT
        <rfc822;linux-media@vger.kernel.org>);
        Sun, 5 Aug 2018 08:03:41 -0400
Subject: Re: [ragnatech:media-tree 273/382]
 drivers/media/i2c/mt9v111.c:801:10: error: implicit declaration of function
 'v4l2_subdev_get_try_format'; did you mean 'v4l2_subdev_notify_event'?
To: jacopo mondi <jacopo@jmondi.org>, kbuild test robot <lkp@intel.com>
Cc: Jacopo Mondi <jacopo+renesas@jmondi.org>, kbuild-all@01.org,
        Mauro Carvalho Chehab <m.chehab@samsung.com>,
        linux-media@vger.kernel.org,
        Kieran Bingham <kieran.bingham+renesas@ideasonboard.com>,
        Sakari Ailus <sakari.ailus@linux.intel.com>
References: <201808050155.97R8Urh7%fengguang.wu@intel.com>
 <20180805093605.GI4528@w540>
From: Hans Verkuil <hverkuil@xs4all.nl>
Message-ID: <cc1cbbcc-8305-dab1-5e48-75f71a5260f8@xs4all.nl>
Date: Sun, 5 Aug 2018 11:59:33 +0200
MIME-Version: 1.0
In-Reply-To: <20180805093605.GI4528@w540>
Content-Type: text/plain; charset=utf-8
Content-Language: en-US
Content-Transfer-Encoding: 7bit
Sender: linux-media-owner@vger.kernel.org
List-ID: <linux-media.vger.kernel.org>

On 08/05/2018 11:36 AM, jacopo mondi wrote:
> On Sun, Aug 05, 2018 at 01:14:58AM +0800, kbuild test robot wrote:
>> tree:   git://git.ragnatech.se/linux media-tree
>> head:   12f336c88090fb8004736fd4329184326a49673b
>> commit: aab7ed1c392703604fbdc5bd5005dfb61a0b32f9 [273/382] media: i2c: Add driver for Aptina MT9V111
>> config: x86_64-randconfig-x010-201831 (attached as .config)
>> compiler: gcc-7 (Debian 7.3.0-16) 7.3.0
>> reproduce:
>>         git checkout aab7ed1c392703604fbdc5bd5005dfb61a0b32f9
>>         # save the attached .config to linux build tree
>>         make ARCH=x86_64
>>
>> All error/warnings (new ones prefixed by >>):
>>
>>    drivers/media/i2c/mt9v111.c: In function '__mt9v111_get_pad_format':
>>>> drivers/media/i2c/mt9v111.c:801:10: error: implicit declaration of function 'v4l2_subdev_get_try_format'; did you mean 'v4l2_subdev_notify_event'? [-Werror=implicit-function-declaration]
>>       return v4l2_subdev_get_try_format(&mt9v111->sd, cfg, pad);
>>              ^~~~~~~~~~~~~~~~~~~~~~~~~~
> 
> I have received this notification a few times now, and it comes from
> the test build being run a kernel configured without the
> CONFIG_VIDEO_V4L2_SUBDEV_API symbol.
> 
> The mt9v111 driver does not list CONFIG_VIDEO_V4L2_SUBDEV_API as a
> Kconfig dependency and the option does not get selected by the config
> generated by kbuild, I guess.
> 
> Should I list CONFIG_VIDEO_V4L2_SUBDEV_API as an mt9v111 dependency
> with an incremental patch?

Yes please. While you're at it, I'm also getting this warning during the daily build:

linux-git-x86_64: WARNINGS

/home/hans/work/build/media-git/drivers/media/i2c/mt9v111.c: In function 'mt9v111_set_format':
/home/hans/work/build/media-git/drivers/media/i2c/mt9v111.c:887:15: warning: 'idx' may be used uninitialized in this function
[-Wmaybe-uninitialized]
  unsigned int idx;
               ^~~

There may be a patch for that already (I haven't checked), but if not, can you fix
this too?

I actually wondered if you shouldn't use the v4l2_find_nearest_size() helper for this
(v4l2-common.h).

Thanks,

	Hans

> 
>>              v4l2_subdev_notify_event
>>>> drivers/media/i2c/mt9v111.c:801:10: warning: return makes pointer from integer without a cast [-Wint-conversion]
>>       return v4l2_subdev_get_try_format(&mt9v111->sd, cfg, pad);
>>              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>>    drivers/media/i2c/mt9v111.c: In function 'mt9v111_set_format':
>>    drivers/media/i2c/mt9v111.c:887:15: warning: 'idx' may be used uninitialized in this function [-Wmaybe-uninitialized]
>>      unsigned int idx;
>>                   ^~~
>>    cc1: some warnings being treated as errors
>>
>> vim +801 drivers/media/i2c/mt9v111.c
>>
>>    791
>>    792	static struct v4l2_mbus_framefmt *__mt9v111_get_pad_format(
>>    793						struct mt9v111_dev *mt9v111,
>>    794						struct v4l2_subdev_pad_config *cfg,
>>    795						unsigned int pad,
>>    796						enum v4l2_subdev_format_whence which)
>>    797	{
>>    798		switch (which) {
>>    799		case V4L2_SUBDEV_FORMAT_TRY:
>>    800	#if IS_ENABLED(CONFIG_MEDIA_CONTROLLER)
>>  > 801			return v4l2_subdev_get_try_format(&mt9v111->sd, cfg, pad);
>>    802	#else
>>    803			return &cfg->try_fmt;
>>    804	#endif
>>    805		case V4L2_SUBDEV_FORMAT_ACTIVE:
>>    806			return &mt9v111->fmt;
>>    807		default:
>>    808			return NULL;
>>    809		}
>>    810	}
>>    811
>>
>> ---
>> 0-DAY kernel test infrastructure                Open Source Technology Center
>> https://lists.01.org/pipermail/kbuild-all                   Intel Corporation
> 
> 
